# libfpx

./: .editorconfig  .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  attributes.h  configure  configure.ac  fpxlib-config.h.in  fpxlib.h
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
basics/: Makefile.am  Makefile.in  a_file.cpp  b_string.cpp  b_types.h  common_b.cpp  debug.cpp  debug.h  filename.cpp  npixel.h  numbers.h
fpx/: Makefile.am  Makefile.in  buffdesc.cpp  coltwist.cpp  f_fpxio.cpp  f_fpxio.h  f_fpxvw.cpp  f_fpxvw.h  filter.cpp  fpxformt.cpp  fpximgvw.cpp  fpximgvw.h  fpxlib.cpp  fpxlibio.cpp  fpxlibio.h  fpxutils.h  imginfio.cpp  pres_fpx.cpp  pres_fpx.h  ptil_fpx.cpp  ptil_fpx.h
jpeg/: Makefile.am  Makefile.in  chen_dct.c  chen_dct.h  dbuffer.c  dbuffer.h  dct.h  decoder.c  decoder.h  dectile.c  dhuff.c  dhuff.h  djpeg.c  djpeg.h  dllmain.c  dparser.c  dparser.h  dscan.c  ebuffer.c  ebuffer.h  ejpeg.h  encoder.h  enctile.c  enctile.h  eparser.c  eparser.h  huffman.c  huffman.h  mcu2rast.c  process.c  process.h  public.c  tables.c  tables.h  win_dct.c  win_dct.h  winograd.c  winograd.h
ole/: Makefile.am  Makefile.in  gen_guid.cpp  oleclink.cpp  olecomm.h  olecore.cpp  olecore.h  olefiles.cpp  olefiles.h  oleprop.cpp  oleprop.h  oleprops.cpp  oleprops.h  olestorg.cpp  olestorg.h  olestrm.cpp  olestrm.h
oless/: Makefile.am  Makefile.in  ascii.cxx  cdocfile.cxx  dfbasis.hxx  dfstream.cxx  dir.cxx  dirp.cxx  docfile.cxx  expdf.cxx  expdf.hxx  expiter.cxx  expiter.hxx  expst.cxx  expst.hxx  fat.cxx  funcs.cxx  mem.cxx  mstream.cxx  page.cxx  refilb.cxx  storage.cxx  vect.cxx  wchar.c
oless/h/: cdocfile.hxx  dfexcept.hxx  dir.hxx  dirfunc.hxx  entry.hxx  handle.hxx  msf.hxx  ole.hxx  owchar.h  page.hxx  props.h  ref.hxx  storage.h  vect.hxx
oless/props/: utils.cxx
oless/props/h/: propset.hxx  windef.h
oless/test/proptest/: chresult.hxx  (+2 more)
ri_image/: Makefile.am  Makefile.in  cp_jpeg.cpp  fn_srch.cpp  matrix.cpp  ph_image.cpp  ph_image.h  pr_level.cpp  pr_level.h  priimage.cpp  priimage.h  ptile.cpp  ri_page.cpp  ri_sys.cpp  ri_sys.h  viewimg.cpp  viewimg.h
(+1 files in other folders)
